# programs

./: .gitignore  README.md  a.out  bd.c  bd.h  db_test.c  install.sh
BBB IO/libBBB/: bbtest.c  libBBB.c
Example_4_PWM/: pwm  pwm.c  pwm.c.save  pwmwithlib  pwmwithlib.c  test.c
PRU-ADC/: ADCCollector  ADCCollector.p  BB-ADC-00A0.dts
api/: main.c  mycoolapi.c  mycoolapi.h
array/: dectoarry.c
bbb-prupwm/: Makefile  README.md  main.cpp
c/Example_4_PWM/: Makefile  libBBB.c  pwm.c_orig  test-class.c
c/PRU-ADC/: ADCCollector.c  Makefile  Results.txt
c/archivos/: pwd.c
c/array/: dectoarry.c
c/debug/: core
c/demonio/: Makefile  UserInterface.c  build.sh  demonio1.c  planificacion.h
c/estructuras/fifo/: .gitignore  Makefile.am  autogen.sh  configure.ac
c/estructuras/fifo/src/: fifo.c  fifo.h
c/estructuras/fifo/test/: fifo.c  test1.c  test1.h
c/file/: list_dir.c  var_dir.c
c/listas/: lista.ep  listas.c
c/mockTest/: Makefile.am  configure.ac
c/mockTest/src/: state.h
c/mockTest/test/: state.c
c/ph-orp-modbus/: ciclo.c  config.h  ph-reader.c
c/test/tdd-c/bowling/: .gitignore  Makefile.am  README.md  autogen.sh  bowling_game.c  bowling_game.h  bowling_game_test.c  build.sh  configure.ac
c/test/tdd-c/bowling/src/: bowling_game.c
c/time/: cuenta.c  otro.c  timediff.c
c/xarmPM-MC/: Makefile (copia)  pub.c
c/xenomai/: Makefile  README.md
conversor/: conversor.c
db/bd-manager-c/: dbManager.c
db/db-manager-c/: dbManager.c
debug/: coreDump.c
demonio/: a.out  brix_orp_test.c  brix_orp_test.h  demonio1.c  modbus.c  sensor.c
enum/: enum.c
estructuras/: struc.c
file/: list_dir.c  regular_expressions.c  var_dir.c
funciones/: cadena.c
java/cliente servidor sin modificar/: servidor.java
java/cliente-servidor/: cliente-servidor.rar
java/gato/: build.xml
listas/: fifo.c  queue.c
matlab/net/: ctrl_code.m  ctrl_code.m-read-send  loadTrueTime.m  net.slx  net.slx.original  net_init.m  net_init.m-read-send  pH_completo_simulacion.slx  pH_completo_simulacion.slx.unknown_version
modulos/ejemplo1/: arp.h  build.sh  ip.c
modulos/ejemplo2/: count.c  main.c
modulos/ejemplo3/: Makefile  data  hist.c
modulos/ejemplo4/: README.md  brix.c  brix_orp_test.c  brix_orp_test.h  enable_pru0-ADC_pru1-PWM.sh  modbus_sensor.c  pru.c  pru.h  serial.c
mysql/: a.out  build.sh
ph-orp-modbus/: build.sh  ciclo.c
php/: poweroff.php
programas/: SalaPB.java  consultamysql.c  consultamysqlI.c  parametro.c  plantilla.java  programa  puntero.c  servidor.java  strcmp.c  timemod.c
programas en c/: carros2.c  hilo.c  puntero.c
programas en c++/InteresAnual/: interesAnual  interesAnual.cpp
programas en c++/audio/: audio.cpp
programas en c++/huter/: CMakeLists.txt  README.md
programas en c++/libroCalificaciones/: LibroCalificaciones.cpp  LibroCalificaciones.h  implementacion  implementacion.cpp
programas en c++/programas en c++/: ASSCI.cpp  Simon_Puente_P1P1_6ºF.rar  a - Copy.txt  ab.txt  abre .exe.cpp  abrir archivo y lo pinta en pantalla.cpp  analisa archivo crea otro con resultados en dev-cpp.cpp  analisa archivo crea otro con resultados.cpp  atoi.cpp  compilador - Copy.cpp  (+11 more)
programas en c++/unit_tests/: CMakeLists.txt  sqrt.cpp  sqrt_test.cpp
python/: py-test.py
syslog/: hello.c
time/: a.out  cuenta.c  tiempo.c
xarmPM-MC/: Makefile  colas.c  memoria.c  middleware.c  middleware.h  mm.c  rmem.c  struct.c  usr.c
xenomai-autotools/: configure.ac
(+144 files in other folders)
