AC_INIT([state], [0.1.0], [fredrik.widlund@gmail.com], [state], [https://github.com/fredrikwidlund/automake-cmocka-example])
AC_CONFIG_AUX_DIR([autotools])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.12 subdir-objects -Wall -Werror no-define])

: ${CFLAGS="-O3 -Wall -Wextra -Wpedantic -std=c11"}
AC_PROG_CC
AM_PROG_AR
AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
