AC_INIT([libfifo], [0.0.1], [simonppg@gmail.com])
AC_CONFIG_AUX_DIR([autotools])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.12 subdir-objects -Wall -Werror no-define])

# Checks for programs.
: ${CFLAGS="-Wall -Wextra -Wpedantic -std=c11"}
AC_PROG_CC
AM_PROG_AR
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])
AC_FUNC_MALLOC

AC_OUTPUT
